# website

./: LICENSE  README.md  main.py  nercone-webserver-autoupdater.timer  nercone-webserver-updater.service  nercone-webserver.service  pyproject.toml  quotes.txt  start.sh  update.sh
files/: license.xml  robots.txt  sitemap.xml
files/assets/styles/: blog.css  main.css
files/nrpmosr/helloworld/: versions.json
html/: 404.html  about.html  access-counter.html  banners.html  base.html  credit.html  index.html  links.html  projects.html
html/blog/: base.html  index.html
html/blog/article/: test-article.html
html/credit/: fastget.html  webserver.html
public/: access-counter.html  base.html  color-palette.md  daily_quote.html  download-banner.html  error-nginx.html  error.html  index.html  links.html  quotes.txt  server-version.html  shorturls.json  site.webmanifest
public/.well-known/openpgpkey/nercone.dev/hu/: oonafwamehuud1q4eb4qkd8gfnxyjohn
public/assets/css/: main.css
public/assets/images/: banner.ai  banner_cat.ai  favicon.ai  favicon_cat.ai  nercone.ai
public/assets/images/color-palette/: 2001.ai  2011.ai
public/test/: font-family.md
src/nercone_webserver/: __main__.py  error.py  middleware.py  server.py
src/nercone_website/: middleware.py  server.py
static/: sitemap.xml
static/assets/images/: favicon.ai  nercone.ai  nercone_banner.ai
templates/: base.html  download-banner.html  gnupg.html  index.html  links.html  pgp-pubkey.html  public-key.html
