[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-webserver"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "psutil",
    "fastapi",
    "jinja2",
    "uvicorn[standard]"
]

[project.scripts]
nercone-webserver = "nercone_webserver.__main__:main"
